--- a/template-iaas/package.ejs
+++ b/template-iaas/package.ejs
@@ -49,16 +49,44 @@
   "homepage": "creacion-de-paquetes-y-modulos-en-nodejs-noejaco2017/README.md",
   "devDependencies": {
     "async": "^1.4.0",
+    "child_process": "^1.0.2",
+    "ejs": "^2.5.2",
+    "express": "^4.14.0",
+    "fs": "0.0.1-security",
     "fs-extra": "^0.22.1",
     "gh-pages": "^0.3.1",
     "gitbook": "^2.1.0",
     "gitbook-cli": "^0.3.4",
+    "graceful-fs": "^4.1.0",
     "gulp": "^3.9.1",
+    "gulp-gh-pages": "^0.5.4",
+    "gulp-install": "~0.6.0",
+    "gulp-run": "^1.7.1",
     "gulp-shell": "^0.5.2",
-    "minimist": "^1.2.0"
+    "minimatch": "^3.0.3",
+    "minimist": "^1.2.0",
+    "path": "^0.12.7",
+    "underscore": "^1.8.3"
   },
   "dependencies": {
+    "async": "^1.4.0",
+    "child_process": "^1.0.2",
     "ejs": "^2.5.2",
+    "express": "^4.14.0",
+    "fs": "0.0.1-security",
+    "fs-extra": "^0.22.1",
+    "gh-pages": "^0.3.1",
+    "gitbook": "^2.1.0",
+    "gitbook-cli": "^0.3.4",
+    "graceful-fs": "^4.1.0",
+    "gulp": "^3.9.1",
+    "gulp-gh-pages": "^0.5.4",
+    "gulp-install": "~0.6.0",
+    "gulp-run": "^1.7.1",
+    "gulp-shell": "^0.5.2",
+    "minimatch": "^3.0.3",
+    "minimist": "^1.2.0",
+    "path": "^0.12.7",
     "underscore": "^1.8.3"
   }
 }
