--- a/template_npm/package.ejs
+++ b/template_npm/package.ejs
@@ -21,6 +21,11 @@
     "url": "<%= direcciongit %>",
     "wiki": "<%= direccionwiki %>"
   },
+  "iaas":{
+    "IP": "<%= direccionip %>",
+    "PATH": "<%=direccionpath%>"
+  },
+
   "keywords": [
     "gitbook",
     "boilerplate",
@@ -43,16 +48,45 @@
   "homepage": "creacion-de-paquetes-y-modulos-en-nodejs-noejaco2017/README.md",
   "devDependencies": {
     "async": "^1.4.0",
+    "child_process": "^1.0.2",
+    "ejs": "^2.5.2",
+    "express": "^4.14.0",
+    "fs": "0.0.1-security",
+    "fs-extra": "^0.22.1",
+    "gh-pages": "^0.3.1",
+    "git-url-parse": "^6.0.7",
+    "gitbook": "^2.1.0",
+    "gitbook-cli": "^0.3.4",
+    "gitbook-start-plugin-iaas-ull-es-noejaco2017": "0.0.23",
+    "gulp": "~3.9.1",
+    "gulp-gh-pages": "^0.5.4",
+    "gulp-shell": "~0.5.2",
+    "minimist": "^1.2.0",
+    "path": "^0.12.7",
+    "simple-git": "^1.51.0",
+    "ssh-exec": "^2.0.0",
+    "underscore": "^1.8.3"
+  },
+  "dependencies": {
+    "async": "^1.4.0",
+    "child_process": "^1.0.2",
+    "ejs": "^2.5.2",
+    "express": "^4.14.0",
+    "fs": "0.0.1-security",
     "fs-extra": "^0.22.1",
     "gh-pages": "^0.3.1",
     "gitbook": "^2.1.0",
     "gitbook-cli": "^0.3.4",
+    "graceful-fs": "^4.1.0",
     "gulp": "^3.9.1",
+    "gulp-gh-pages": "^0.5.4",
+    "gulp-install": "~0.6.0",
+    "gulp-run": "^1.7.1",
     "gulp-shell": "^0.5.2",
-    "minimist": "^1.2.0"
-  },
-  "dependencies": {
-    "ejs": "^2.5.2",
-    "underscore": "^1.8.3"
+    "minimatch": "^3.0.3",
+    "minimist": "^1.2.0",
+    "path": "^0.12.7",
+    "underscore": "^1.8.3",
+    "ssh-exec": "^2.0.0"
   }
 }
