--- a/template_npm/package.ejs
+++ b/template_npm/package.ejs
@@ -57,7 +57,7 @@
     "git-url-parse": "^6.0.7",
     "gitbook": "^2.1.0",
     "gitbook-cli": "^0.3.4",
-    "gitbook-start-plugin-iaas-ull-es-noejaco2017": "0.0.23",
+    "gitbook-start-plugin-iaas-ull-es-noejaco2017": "*",
     "gulp": "~3.9.1",
     "gulp-gh-pages": "^0.5.4",
     "gulp-shell": "~0.5.2",
