Creada estructura para adaptar el plugin heroku

--- a/template_npm/package.ejs
+++ b/template_npm/package.ejs
@@ -1,6 +1,6 @@
 {
   "name": " <%= autor %> ",
-  "version": " <%= num %> ",
+  "version": " 0.0.1 ",
 "description": "Creacion de un paquete npm",
   "main": "./bin/linea-comando-npm.js",
   "scripts": {
@@ -25,7 +25,9 @@
     "IP": "<%= direccionip %>",
     "PATH": "<%=direccionpath%>"
   },
-
+  "heroku":{
+    "IP": "<%= nombreheroku %>"
+  },
   "keywords": [
     "gitbook",
     "boilerplate",
