--- a/template_npm/package.ejs
+++ b/template_npm/package.ejs
@@ -48,13 +48,13 @@
     "child_process": "^1.0.2",
     "ejs": "^2.5.2",
     "express": "^4.14.0",
-    "fs": "0.0.1-security",
+    "fs": "*",
     "fs-extra": "^0.22.1",
     "gh-pages": "^0.3.1",
     "git-url-parse": "^6.0.7",
     "gitbook": "^2.1.0",
     "gitbook-cli": "^0.3.4",
-    "gitbook-start-plugin-iaas-ull-es-noejaco2017": "*",
+    "gitbook-start-team-noejaco2017-2.0": "*",
     "gulp": "~3.9.1",
     "gulp-gh-pages": "^0.5.4",
     "gulp-shell": "~0.5.2",
