--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,6 @@
 <% if (!user) { %>
 	<p>Welcome! Please <a href="/login">log in</a>.</p>
+  <p>Bye Bye! <a href="/logout">log out</a>.</p>
 <% } else { %>
 	<p>Hello, <%= user.username %>. View your <a href="/profile">profile</a>.</p>
 <% } %>
