--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,8 +1,8 @@
 <p>
-ID: <%= user.id %><br/>
-Username: <%= user.username %><br/>
+ID: <%= id %><br/>
+Username: <%= username %><br/>
 Name: <%= user.displayName %><br/>
-<% if (user.emails) { %>
+<% if (user.email) { %>
 Email: <%= user.emails[0].value %><br/>
 <% } %>
 </p>
