--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,2 +1,7 @@
+<head>
+<link rel="stylesheet" href="estilo_ejs.css">
+</head>
+<body>
 <a href="/auth/github">Log In with GitHub</a>
 <!--a href="/login/github">Log In with GitHub</a-->
+</body>
