--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,3 +1,7 @@
+<head>
+<link rel="stylesheet" href="estilo_ejs.css">
+</head>
+<body>
 <p>
 ID: <%= id %><br/>
 Username: <%= username %><br/>
@@ -6,3 +10,4 @@ Name: <%= user.displayName %><br/>
 Email: <%= user.emails[0].value %><br/>
 <% } %>
 </p>
+</body>
