--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,10 +1,10 @@
-<!--head>
+<!-- <head>
 <link rel="stylesheet" href="estilo_ejs.css">
 </head>
 <body>
 <a href="/auth/github">Log In with GitHub</a>
-<a href="/login/github">Log In with GitHub</a>
-</body-->
+<a href="/auth/dropbox">Log In with DROPBOX</a>
+</body> -->
 
 
 <html>
