--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -5,9 +5,9 @@
 <p>
 ID: <%= id %><br/>
 Username: <%= username %><br/>
-Name: <%= user.displayName %><br/>
-<% if (user.email) { %>
-Email: <%= user.emails[0].value %><br/>
-<% } %>
+Name: <!--%= user.displayName %--><br/>
+<!--% if (user.email) { %-->
+Email: <!--%= user.emails[0].value %--><br/>
+<!--% } %-->
 </p>
 </body>
