--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,13 +1,76 @@
-<head>
-<link rel="stylesheet" href="estilo_ejs.css">
-</head>
-<body>
-	<h1>Apuntes Sistemas y Tecnologías Web</h1>
+<!--<head>-->
+<!--<link rel="stylesheet" href="../public/animate.css">-->
+<!--<link rel="stylesheet" href="../public/estilo_ejs.css">-->
+<!--</head>-->
+<!--<body>-->
+<!--	<h1>Apuntes Sistemas y Tecnologías Web</h1>-->
 
-<% if (!user) { %>
-	<p>Welcome! Please <a href="/login">log in</a>.</p>
-  <p>Bye Bye! <a href="/logout">log out</a>.</p>
+<!--Insertar aquí lo de txt-->
+
+
+<!---------------->
+<html lang="en">
+
+<head>
+	<meta charset="utf-8">
+	<title>Daily UI - Day 1 Sign In</title>
+
+	<!-- Google Fonts -->
+	<link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700|Lato:400,100,300,700,900' rel='stylesheet' type='text/css'>
+
+	<link rel="stylesheet" href="..public/animate.css">
+	<!-- Custom Stylesheet -->
+	<link rel="stylesheet" href="..public/estilo_ejs.css">
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+</head>
+
+<body>
+	<% if (!user) { %>
+	
+	<div class="container">
+		<div class="top">
+			<h1 id="title" class="hidden"><span id="logo">Apuntes: <span>SYTW</span></span></h1>
+		</div>
+		<div class="login-box animated fadeInUp">
+			<div class="box-header">
+				<h2>Log In</h2>
+			</div>
+			<label for="username">Username</label>
+			<br/>
+			<input type="text" id="username">
+			<br/>
+			<label for="password">Password</label>
+			<br/>
+			<input type="password" id="password">
+			<br/>
+			<button type="submit">Sign In</button>
+			<br/>
+			<a href="/err"><p class="small">Forgot your password?</p></a>
+		</div>
+	</div>
+	
 <% } else { %>
 	<p>Hello, <%= user.username %>. View your <a href="/profile">profile</a>.</p>
 <% } %>
+	
 </body>
+
+<script>
+	$(document).ready(function () {
+    	$('#logo').addClass('animated fadeInDown');
+    	$("input:text:visible:first").focus();
+	});
+	$('#username').focus(function() {
+		$('label[for="username"]').addClass('selected');
+	});
+	$('#username').blur(function() {
+		$('label[for="username"]').removeClass('selected');
+	});
+	$('#password').focus(function() {
+		$('label[for="password"]').addClass('selected');
+	});
+	$('#password').blur(function() {
+		$('label[for="password"]').removeClass('selected');
+	});
+</script>
