--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -10,4 +10,5 @@ Name: <!--%= user.displayName %--><br/>
 Email: <!--%= user.emails[0].value %--><br/>
 <!--% } %-->
 </p>
+<p>Bye Bye! <a href="/logout">log out</a>.</p>
 </body>
