--- a/views/home.ejs
+++ b/views/home.ejs
@@ -36,19 +36,20 @@
 			<div class="box-header">
 				<h2>Log In</h2>
 			</div>
-			<label for="username">Username</label>
+			<label for="Username:">Username</label>
 			<br/>
 			<input type="text" id="username">
 			<br/>
-			<label for="password">Password</label>
+			<label for="Password:">Password</label>
 			<br/>
 			<input type="password" id="password">
 			<br/>
 			<button type="submit">Sign In</button>
 			<br/>
-			<a href="/err"><p class="small">Forgot your password?</p></a>
 		</div>
+		
 	</div>
+	
 	
 <% } else { %>
 	<p>Hello, <%= user.username %>. View your <a href="/profile">profile</a>.</p>
