--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,22 +7,87 @@
 </body> -->
 
 
-<html>
-  <link rel="stylesheet" href="estilo_ejs.css">
-  <body>
-    <form action="/login" method="post">
-      <div>
-        <label>Username:</label>
-        <input type="text" name="username" />
-        <br/>
-      </div>
-      <div>
-        <label>Password:</label>
-        <input type="password" name="password" />
-      </div>
-      <div>
-        <input type="submit" value="Submit" />
-      </div>
-    </form>
-  </body>
-</html>
+<!--<html>-->
+<!--  <link rel="stylesheet" href="estilo_ejs.css">-->
+<!--  <body>-->
+<!--    <form action="/login" method="post">-->
+<!--      <div>-->
+<!--        <label>Username:</label>-->
+<!--        <input type="text" name="username" />-->
+<!--        <br/>-->
+<!--      </div>-->
+<!--      <div>-->
+<!--        <label>Password:</label>-->
+<!--        <input type="password" name="password" />-->
+<!--      </div>-->
+<!--      <div>-->
+<!--        <input type="submit" value="Submit" />-->
+<!--      </div>-->
+<!--    </form>-->
+<!--  </body>-->
+<!--</html>-->
+
+
+<html lang="en">
+
+<head>
+	<meta charset="utf-8">
+	<title>Daily UI - Day 1 Sign In</title>
+
+	<!-- Google Fonts -->
+	<link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700|Lato:400,100,300,700,900' rel='stylesheet' type='text/css'>
+
+	<link rel="stylesheet" href="..public/animate.css">
+	<!-- Custom Stylesheet -->
+	<link rel="stylesheet" href="..public/estilo_ejs.css">
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+</head>
+
+<body>
+
+
+	<div class="container">
+		<div class="top">
+			<h1 id="title" class="hidden"><span id="logo">Apuntes: <span>SYTW</span></span></h1>
+		</div>
+		<div class="login-box animated fadeInUp">
+			<div class="box-header">
+				<h2>Log In</h2>
+			</div>
+			<form action="/login" method="post">
+			<label for="Username:">Username</label>
+			<br/>
+			<input type="text" id="username">
+			<br/>
+			<label for="Password:">Password</label>
+			<br/>
+			<input type="password" id="password">
+			<br/>
+			<button type="submit">Sign In</button>
+			<br/>
+			</form>
+		</div>
+		
+	</div>
+	
+	</body>
+
+<script>
+	$(document).ready(function () {
+    	$('#logo').addClass('animated fadeInDown');
+    	$("input:text:visible:first").focus();
+	});
+	$('#username').focus(function() {
+		$('label[for="username"]').addClass('selected');
+	});
+	$('#username').blur(function() {
+		$('label[for="username"]').removeClass('selected');
+	});
+	$('#password').focus(function() {
+		$('label[for="password"]').addClass('selected');
+	});
+	$('#password').blur(function() {
+		$('label[for="password"]').removeClass('selected');
+	});
+</script>
