--- a/views/login.ejs
+++ b/views/login.ejs
@@ -56,15 +56,21 @@
 				<h2>Log In</h2>
 			</div>
 			<form action="/login" method="post">
-			<label for="Username:">Username</label>
+			<!--<label for="Username:">Username</label>-->
+			<!--<br/>-->
+			<!--<input type="text" id="username" name="username">-->
+			<label>Username:</label>
 			<br/>
-			<input type="text" id="username">
+      <input type="text" name="username" />
 			<br/>
-			<label for="Password:">Password</label>
+			<!--<label for="Password:">Password</label>-->
+			<!--<br/>-->
+			<!--<input type="password" id="password" name="password">-->
+			<label>Password:</label>
+      <input type="password" name="password" />
 			<br/>
-			<input type="password" id="password">
-			<br/>
-			<button type="submit">Sign In</button>
+			<!--<button type="submit" value="submit">Sign In</button>-->
+			<input type="submit" value="Submit" />
 			<br/>
 			</form>
 		</div>
