--- a/views/home.ejs
+++ b/views/home.ejs
@@ -30,6 +30,7 @@
 	<p>Welcome! Please <a href="/login">log in</a>.</p>
   <p>Bye Bye! <a href="/logout">log out</a>.</p>
 <% } else { %>
-	<p>Hello, <%= user.username %>. View your <a href="/profile">profile</a>.</p>
+	
+	<p>Hello, <%= user.username %> enjoy the <a href="https://alu0100836059.github.io/Apuntes_SYTW/">book</a>.</p>
 <% } %>
 </body>
