--- a/views/home.ejs
+++ b/views/home.ejs
@@ -27,8 +27,8 @@
 
 <body>
 	<% if (!user) { %>
-	<p>Welcome! Please <a href="/login">log in</a>.</p>
-  <p>Bye Bye! <a href="/logout">log out</a>.</p>
+	<p>Bienvenido! Por favor, acceda al <a href="/login">log in</a>.</p>
+  	<p>Si no posee una cuenta, por favor <a href="/registro">regístrese</a>.</p>
 <% } else { %>
 	
 	<p>Hello, <%= user.username %> enjoy the <a href="https://alu0100836059.github.io/Apuntes_SYTW/">book</a>.</p>
