Trabajando en la creación y guardado de nuevos usuarios

--- a/views/registro.ejs
+++ b/views/registro.ejs
@@ -25,19 +25,19 @@
 			<div class="box-header">
 				<h2>Registro</h2>
 			</div>
-			<form action="/registro" method="post">
+			<form  id="form_registro" action="/registro" method="post">
 			<!--<label for="Username:">Username</label>-->
 			<!--<br/>-->
 			<!--<input type="text" id="username" name="username">-->
 			<label>Username:</label>
 			<br/>
-            <input type="text" name="username" />
+            <input type="text" name="username_reg" />
 			<br/>
 			<!--<label for="Password:">Password</label>-->
 			<!--<br/>-->
 			<!--<input type="password" id="password" name="password">-->
 			<label>Password:</label>
-            <input type="password" name="password" />
+            <input type="password" name="password_reg" />
 			<br/>
 			<!--<button type="submit" value="submit">Sign In</button>-->
 			<input type="submit" value="Submit" />
