--- a/views/home.ejs
+++ b/views/home.ejs
@@ -18,9 +18,9 @@
 	<!-- Google Fonts -->
 	<link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700|Lato:400,100,300,700,900' rel='stylesheet' type='text/css'>
 
-	<link rel="stylesheet" href="..public/animate.css">
+	<link rel="stylesheet" href="./public/animate.css">
 	 <!--Custom Stylesheet -->
-	<link rel="stylesheet" href="..public/estilo_ejs.css">
+	<link rel="stylesheet" href="./public/estilo_ejs.css">
 </head>
 
 
