--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,5 +1,6 @@
 <!-- <head>
-<link rel="stylesheet" href="estilo_ejs.css">
+
+<link rel="stylesheet" href="./public/estilo_ejs.css">
 </head>
 <body>
 <a href="/auth/github">Log In with GitHub</a>
@@ -37,9 +38,9 @@
 	<!-- Google Fonts -->
 	<link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700|Lato:400,100,300,700,900' rel='stylesheet' type='text/css'>
 
-	<link rel="stylesheet" href="..public/animate.css">
+	<link rel="stylesheet" href="./public/animate.css">
 	<!-- Custom Stylesheet -->
-	<link rel="stylesheet" href="..public/estilo_ejs.css">
+	<link rel="stylesheet" href="./public/estilo_ejs.css">
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 </head>
