--- a/views/login.ejs
+++ b/views/login.ejs
@@ -33,7 +33,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Daily UI - Day 1 Sign In</title>
+	<title>Login</title>
 
 	<!-- Google Fonts -->
 	<link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700|Lato:400,100,300,700,900' rel='stylesheet' type='text/css'>
@@ -57,21 +57,21 @@
 				<h2>Log In</h2>
 			</div>
 			<form action="/login" method="post">
-			<!--<label for="Username:">Username</label>-->
-			<!--<br/>-->
-			<!--<input type="text" id="username" name="username">-->
-			<label>Username:</label>
+			<label for="Username:">Username</label>
 			<br/>
-      <input type="text" name="username" />
+			<input type="text" id="username" name="username">
+			<!--<label>Username:</label>-->
 			<br/>
-			<!--<label for="Password:">Password</label>-->
-			<!--<br/>-->
-			<!--<input type="password" id="password" name="password">-->
-			<label>Password:</label>
-      <input type="password" name="password" />
+      		<!--<input type="text" name="username" />-->
 			<br/>
-			<!--<button type="submit" value="submit">Sign In</button>-->
-			<input type="submit" value="Submit" />
+			<label for="Password:">Password</label>
+			<br/>
+			<input type="password" id="password" name="password">
+			<!--<label>Password:</label>-->
+    		<!--<input type="password" name="password" />-->
+			<br/>
+			<button type="submit">Sign In</button>
+			<!--<input type="submit" value="Submit" />-->
 			<br/>
 			</form>
 		</div>
