Acabada :err, estilo:90%

--- a/views/err.ejs
+++ b/views/err.ejs
@@ -1,1 +1,28 @@
 <p>Usted no pertenece a la organización correspondiente</p>
+<head>
+	<meta charset="utf-8">
+	<title>ERROR</title>
+
+	<!-- Google Fonts -->
+	<link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700|Lato:400,100,300,700,900' rel='stylesheet' type='text/css'>
+
+	<link rel="stylesheet" href="./public/animate.css">
+	<!-- Custom Stylesheet -->
+	<link rel="stylesheet" href="./public/estilo_ejs.css">
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+</head>
+
+<body>
+
+
+	<div class="container">
+		<div class="top">
+			<h1 id="title" class="hidden"><span id="logo"><span>Ha ocurrido un error en la autenticación</span></span></h1>
+			<br/><br/><br/><br/><br/>
+		<div class="botones_reg animated fadeInUp">
+			<a id="acceso" href="/login">Volver al login</a>
+		</div>
+		</div>
+    </div>
+</body>
