:cambio_pass en proceso

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -71,6 +71,8 @@
     		<!--<input type="password" name="password" />-->
 			<br/>
 			<button type="submit">Sign In</button>
+			<br/>
+			<a href="/login/password"><p class="small">Ha olvidado su contraseña?</p></a>
 			<!--<input type="submit" value="Submit" />-->
 			<br/>
 			</form>
