Creada :cambio_pass lectura OK

--- a/views/cambio_pass.ejs
+++ b/views/cambio_pass.ejs
@@ -25,7 +25,7 @@
 			<div class="box-header">
 				<h2>Cambio de contraseña</h2>
 			</div>
-			<form action="/login/cambio_pass" method="post">
+			<form action="/login/password" method="post">
 			<label for="Username:">Username</label>
 			<br/>
 			<input type="text" id="username" name="username">
