:test modificacion bdd, problema estilos cambio_pass.ejs

--- a/views/cambio_pass.ejs
+++ b/views/cambio_pass.ejs
@@ -7,9 +7,9 @@
 	<!-- Google Fonts -->
 	<link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700|Lato:400,100,300,700,900' rel='stylesheet' type='text/css'>
 
-	<link rel="stylesheet" href="./public/animate.css">
+	<link rel="stylesheet" href="./public/animate.css" type="text/css">
 	<!-- Custom Stylesheet -->
-	<link rel="stylesheet" href="./public/estilo_ejs.css">
+	<link rel="stylesheet" href="./public/estilo_ejs.css" type="text/css">
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 </head>
@@ -33,11 +33,11 @@
 			<br/>
       		<!--<input type="text" name="username" />-->
 			<br/>
-			<label for="Password:">Nueva Password</label>
+			<label for="Password:">Nueva contraseña</label>
 			<br/>
 			<input type="password" id="password" name="password_new">
 			<br/>
-			<label for="Password:">Repita nueva Password</label>
+			<label for="Password:">Repita nueva contraseña</label>
 			<br/>
 			<input type="password" id="password" name="password_new_2">
 			<!--<label>Password:</label>-->
