--- a/views/cambio_pass.ejs
+++ b/views/cambio_pass.ejs
@@ -7,6 +7,7 @@
 	<!-- Google Fonts -->
 	<link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700|Lato:400,100,300,700,900' rel='stylesheet' type='text/css'>
 
+	<!-- No está cargando correctamente las hojas de estilo -->
 	<link rel="stylesheet" href="./public/animate.css" type="text/css">
 	<!-- Custom Stylesheet -->
 	<link rel="stylesheet" href="./public/estilo_ejs.css" type="text/css">
